--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -6,8 +6,49 @@
     align-items: center;
 }
 
+.store-logo {
+    font-weight: bold;
+    font-size: $h1-font-size;
+    user-select: none;
+}
+
 .cart-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    column-gap: 8px;
+
+    .cart-icon__svg,
+    .cart-block__filters-icon {
+        stroke: $main-black;
+        width: 1.5rem;
+        height: 1.5rem;
+        cursor: pointer;
+        transition: 300ms;
+    }
+
+    .cart-icon__svg:hover,
+    .cart-block__filters-icon:hover {
+        stroke: $main-gold;
+    }
+
+    &__cart-icon {
+        position: relative;
+
+        .cart-icon__count {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            bottom: -6px;
+            right: -6px;
+            background-color: $main-gold;
+            width: 1.1rem;
+            height: 1.1rem;
+            border-radius: 50%;
+            font-size: $pagination-font-size;
+            user-select: none;
+        }
+    }
 }
+
