--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,8 @@ html {
     font-family: $base-font-family;
     color: $main-black;
 }
+
+.page-wrapper {
+    margin: 0 auto;
+    max-width: 1200px;
+}
