feat: add desktop footer

--- a/src/scss/blocks/_colors.scss
+++ b/src/scss/blocks/_colors.scss
@@ -17,3 +17,7 @@ $h1-font-size: 36px;
 $nav-font-size: 14px;
 $price-font-size: 18px;
 $pagination-font-size: 12px;
+
+$breakpoint-mobile: 320px;
+$breakpoint-small-tablet: 450px;
+$breakpoint-tablet: 720px;
