feat: add page 404 files

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import './blocks/header';
 @import './blocks/colors';
 @import './blocks/footer';
+@import './blocks/page404';
 
 html {
     font-family: $base-font-family;
@@ -13,5 +14,5 @@ html {
 }
 
 main {
-    min-height: 70vh;
+    min-height: calc(100vh-230px);
 }
