--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import './blocks/colors';
 @import './blocks/footer';
 @import './blocks/page404';
+@import './blocks/filter-home-page';
 
 html {
     font-family: $base-font-family;
