--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import "./blocks/header";
 @import "./blocks/colors";
 @import "./blocks/footer";
+@import "./blocks/main";
 
 html {
     font-family: $base-font-family;
