--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -1,27 +1,35 @@
 .products {
   width: 100%;
   &__list {
+    width: 100%;
     padding: 10px;
     display: grid;
-    grid-template: auto / 1fr 1fr 1fr 1fr;
-    gap: 25px;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 40px;
+    column-gap: 25px;
   }
   &__item {
     display: grid;
-    grid-template: auto / 1fr;
+    grid-template: 220px 1fr 1fr / 1fr;
     gap: 5px;
+    width: 100%;
+    cursor: pointer;
     &-img {
+      align-self: flex-start;
       width: 100%;
       height: 100%;
+      object-fit: contain;
     }
     &-title {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       text-align: center;
+      align-self: flex-end;
     }
     &-price {
       text-align: center;
       font-size: 1.2rem;
       color: $main-gray-dark;
+      align-self: flex-end;
     }
   }
 }
