--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -11,7 +11,7 @@
   &__item {
     display: grid;
     grid-template: 220px 1fr 1fr / 1fr;
-    gap: 5px;
+    gap: 10px;
     width: 100%;
     cursor: pointer;
     &-img {
@@ -22,6 +22,7 @@
     }
     &-title {
       font-size: 1.1rem;
+      color: $main-black;
       text-align: center;
       align-self: flex-end;
     }
