feat: add product details page layot

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./blocks/colors";
 @import "./blocks/footer";
 @import "./blocks/main";
+@import "./blocks/details";
 
 html {
     font-family: $base-font-family;
