feat: add blocks for categories and sliders

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,11 +2,12 @@
 @import './blocks/colors';
 @import './blocks/footer';
 @import './blocks/page404';
-@import './blocks/filter-home-page';
+@import './blocks/filters';
 
 html {
     font-family: $base-font-family;
     color: $main-black;
+    overflow: hidden;
 }
 
 .page-wrapper {
