--- a/src/scss/blocks/_filters.scss
+++ b/src/scss/blocks/_filters.scss
@@ -32,7 +32,7 @@
         width: 260px;
         height: 1px;
         background-color: $main-gray-light;
-        margin: 50px 0;
+        margin: 20px 0;
     }
 }
 
@@ -62,24 +62,23 @@
     }
 }
 
-
-$w: 20em;
-$h: 1em;
-
-// @mixin track() {
-//   width: 100%; height: 100%;
-//   background: none /* get rid of Firefox track background */
-// }
-
-@mixin thumb() {
-  border: none; /* get rid of Firefox thumb border */
-  width: $h; height: $h;
-  border-radius: 0; /* get rid of Firefox corner rounding */
-  background: currentcolor;
-  pointer-events: auto
-}
-
 .category-block {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    &__title {
+        color: $main-black;
+        font-weight: bold;
+        font-size: $price-font-size;
+    }
+    &__item {
+        margin-top: 20px;
+    }
+    &__properties {
+        display: flex;
+        width: 250px;
+        justify-content: space-around;
+    }
     &__slider {
         display: grid;
         grid-template-rows: max-content 1em;
@@ -87,19 +86,26 @@ $h: 1em;
         width: 250px;
         overflow: hidden;
         position: relative;
+        background: linear-gradient(0deg, #ccc 1em, transparent 0);
         input {
+            &::-webkit-slider-thumb, & {
+                -webkit-appearance: none
+              }
             grid-column: 1;
             grid-row: 2;
             background: none;
             color: $main-black-deep;
-            -webkit-appearance: none;
             background: none;
             pointer-events: none;
-            // &::-webkit-slider-runnable-track { @include track }
-            // &::-moz-range-track { @include track }
-            
-            &::-webkit-slider-thumb { @include thumb }
-            &::-moz-range-thumb { @include thumb }
+            margin: 0;
+            &::-webkit-slider-thumb { 
+                width: 1em;
+                height: 1em;
+                pointer-events: auto;
+                border-radius: 0;
+                background: $main-black-deep;
+                cursor: pointer;
+             }
         }
     }
 }
