--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,10 @@
 html {
     font-family: $base-font-family;
     color: $main-black;
+    overflow-x: hidden;
+}
+
+.html_scroll-lock {
     overflow: hidden;
 }
 
