--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -13,6 +13,8 @@
     grid-template: 220px 1fr 1fr / 1fr;
     gap: 10px;
     width: 100%;
+    position: relative;
+    z-index: 10;
     cursor: pointer;
     &-img {
       align-self: flex-start;
@@ -25,6 +27,10 @@
       color: $main-black;
       text-align: center;
       align-self: flex-end;
+      transition: all 0.2s;
+      &:hover {
+        color: $main-gold;
+      }
     }
     &-price {
       text-align: center;
