feat: complete path for store

--- a/src/scss/blocks/_details.scss
+++ b/src/scss/blocks/_details.scss
@@ -37,7 +37,9 @@
     }
   }
   &__big-img {
+    align-self: flex-start;
     width: 100%;
+    height: 70vh;
     img {
       width: 100%;
       height: 100%;
