--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,18 @@ html {
     margin: 0 auto;
     max-width: 1200px;
 }
-
+#page-menu {
+    margin: 40px 0px;
+    font-size: 2rem;
+    font-weight: 500;
+    a {
+        transition: all 0.2s;
+        color: $main-black-deep;
+        &:hover {
+            color: $main-gold;
+        }
+    }
+}
 main {
     min-height: calc(100vh-230px);
 }
