--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -7,6 +7,7 @@
     padding: 10px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 300px);
     row-gap: 40px;
     column-gap: 25px;
   }
@@ -15,6 +16,7 @@
     grid-template: 220px 1fr 1fr / 1fr;
     gap: 10px;
     width: 100%;
+    height: 30%;
     position: relative;
     z-index: 10;
     cursor: pointer;
