feat: add modal tags

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,8 @@
 @import "./blocks/details";
 @import "./blocks/page404";
 @import "./blocks/filters";
+@import "./blocks/modal";
+
 
 html {
     font-family: $base-font-family;
