--- a/src/scss/blocks/_colors.scss
+++ b/src/scss/blocks/_colors.scss
@@ -4,6 +4,7 @@ $main-black-deep: #000000;
 $main-gray: #777777;
 $main-gray-dark: #666666;
 $main-gray-light: #999999;
+$gray-input-border: #e8e8e8;
 $main-gold: #dcb14a;
 $color-gray-placeholder: #e5e7eb;
 $color-red-sale-icon: #f14705;
