--- a/src/scss/blocks/_filters.scss
+++ b/src/scss/blocks/_filters.scss
@@ -1,19 +1,6 @@
-.filters-container {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: $color-bg-full-transparent;
-    transition: 300ms;
+.products__filter {
+    grid-row: 1/3;
 }
-
-.filters-container_show {
-    z-index: 10;
-    background-color: $color-bg-half-transparent;
-}
-
 .filters-block {
     display: flex;
     flex-direction: column;
