--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -1,7 +1,11 @@
 .products {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 80fr;
   width: 100%;
   &__list {
+    grid-column: 2/3;
+    grid-row: 2/3;
     order: 2;
     width: 100%;
     padding: 10px;
@@ -16,7 +20,7 @@
     grid-template: 220px 1fr 1fr / 1fr;
     gap: 10px;
     width: 100%;
-    height: 30%;
+    height: 300px;
     position: relative;
     z-index: 10;
     cursor: pointer;
@@ -42,5 +46,8 @@
       color: $main-gray-dark;
       align-self: flex-end;
     }
+  }
+  &__bar {
+    grid-row: 1/2;
   }
 }
