--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./blocks/details";
 @import "./blocks/page404";
 @import "./blocks/filters";
+@import "./blocks//mainBar";
 
 html {
     font-family: $base-font-family;
