--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -1,17 +1,17 @@
 .products {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 80fr;
   width: 100%;
   &__list {
     grid-column: 2/3;
     grid-row: 2/3;
     order: 2;
     width: 100%;
+    height: 100%;
     padding: 10px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 300px);
+    grid-template-rows: repeat(8, 300px);
     row-gap: 40px;
     column-gap: 25px;
   }
@@ -20,7 +20,7 @@
     grid-template: 220px 1fr 1fr / 1fr;
     gap: 10px;
     width: 100%;
-    height: 300px;
+    height: 290px;
     position: relative;
     z-index: 10;
     cursor: pointer;
