--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -1,6 +1,7 @@
 .products {
   display: grid;
   grid-template-columns: 1fr 3fr;
+  grid-template-rows: 0fr 1fr;
   width: 100%;
   &__list {
     grid-column: 2/3;
@@ -11,7 +12,7 @@
     padding: 10px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(8, 300px);
+    grid-auto-rows: 300px;
     row-gap: 40px;
     column-gap: 25px;
   }
@@ -49,5 +50,6 @@
   }
   &__bar {
     grid-row: 1/2;
+    height: 100px;
   }
 }
