--- a/src/scss/blocks/_mainBar.scss
+++ b/src/scss/blocks/_mainBar.scss
@@ -1,3 +1,23 @@
+@mixin dotsProp {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 100%;
+  background-color: $main-gray-dark;
+}
+@mixin dotsBlockProp {
+  position: relative;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+  transition: all 0.2s;
+  &:hover {
+    transform: scale(1.2);
+    p {
+      background-color: $main-black-deep;
+    }
+  }
+}
 .products__bar {
   display: flex;
   justify-content: space-between;
@@ -5,7 +25,76 @@
   font-size: 1.2rem;
   font-weight: 500;
   &-sort {
-    font-size: 1.2rem;
-    font-weight: 500;
+    &-select {
+      cursor: pointer;
+      font-size: 1.2rem;
+      font-weight: 500;
+    }
+  }
+  &-position-row {
+    display: flex;
+    column-gap: 20px;
+    &-3 {
+      @include dotsBlockProp;
+      p {
+        @include dotsProp;
+        &:nth-child(2) {
+          left: 0;
+          top: 15px;
+        }
+        &:nth-child(3) {
+          left: 15px;
+          top: 15px;
+        }
+      }
+    }
+    &-4 {
+      @include dotsBlockProp;
+      p {
+        @include dotsProp;
+        &:nth-child(2) {
+          left: 0;
+          top: 15px;
+        }
+        &:nth-child(3) {
+          left: 15px;
+          top: 15px;
+        }
+        &:nth-child(4) {
+          left: 15px;
+          top: 0px;
+        }
+      }
+    }
+    &-5 {
+      @include dotsBlockProp;
+      p {
+        @include dotsProp;
+        &:nth-child(2) {
+          left: 0;
+          top: 15px;
+        }
+        &:nth-child(3) {
+          left: 15px;
+          top: 15px;
+        }
+        &:nth-child(4) {
+          left: 15px;
+          top: 0px;
+        }
+        &:nth-child(5) {
+          left: 7.5px;
+          top: 7.5px;
+        }
+      }
+    }
+    &-active {
+      &:hover {
+        transform: scale(1);
+      }
+      p {
+        background-color: $main-black-deep;
+      }
+    }
   }
 }
