feat: add logic resetBtn, copyBtn, empty text

--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -53,3 +53,9 @@
     height: 100px;
   }
 }
+.empty__list {
+  display: none;
+  font-size: 5rem;
+  align-items: center;
+  justify-content: center;
+}
