--- a/src/scss/blocks/_filters.scss
+++ b/src/scss/blocks/_filters.scss
@@ -55,11 +55,15 @@
     display: flex;
     flex-direction: column;
     width: 250px;
+    max-height: 260px;
+    overflow-x: overlay;
     &__title {
         user-select: none;
         color: $main-black;
         font-weight: bold;
         font-size: $price-font-size;
+        width: 250px;
+        margin-bottom: 10px;
     }
     &__item {
         margin-top: 20px;
