feat: add card icons from assets

--- a/src/scss/blocks/_colors.scss
+++ b/src/scss/blocks/_colors.scss
@@ -25,3 +25,9 @@ $pagination-font-size: 12px;
 $breakpoint-mobile: 320px;
 $breakpoint-small-tablet: 450px;
 $breakpoint-tablet: 720px;
+
+$card-logo: url('/assets/img/nops-icon.webp');
+$card-aexpres: url('/assets/img/aExpress-icon.svg');
+$card-visa: url("/assets/img/visa-icon.png");
+$card-mc: url('/assets/img/mc-icon.svg');
+$card-up: url('/assets/img/up-icon.png');
