feat: add product card animation, reorganize files

--- a/src/scss/blocks/_colors.scss
+++ b/src/scss/blocks/_colors.scss
@@ -8,11 +8,11 @@ $main-gold: #dcb14a;
 $color-gray-placeholder: #e5e7eb;
 $color-red-sale-icon: #f14705;
 $color-blue-dicount: #98d6ca;
-$color-bg-full-transparent: rgba(1,1,1,0);
-$color-bg-half-transparent: rgba(1,1,1,0.5);
+$color-bg-full-transparent: rgba(1, 1, 1, 0);
+$color-bg-half-transparent: rgba(1, 1, 1, 0.5);
 $gradient-bg-slider: linear-gradient(0deg, #ccc 1em, transparent 0);
 
-$base-font-family: 'Roboto', sans-serif;
+$base-font-family: "Roboto", sans-serif;
 $base-font-size: 16px;
 $base-font-weight: 400;
 
