--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,8 +1,8 @@
-@import './_colors.scss';
+@import "./_colors.scss";
 
 .page-header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 80px;
 }
@@ -83,13 +83,11 @@
         }
     }
 
-    &__cart-icon:hover
-    .cart-icon__svg {
+    &__cart-icon:hover .cart-icon__svg {
         stroke: $main-gold;
     }
 
-    &__cart-icon:hover
-    .cart-icon__count {
+    &__cart-icon:hover .cart-icon__count {
         color: $main-white;
     }
 }
