--- a/src/scss/blocks/_details.scss
+++ b/src/scss/blocks/_details.scss
@@ -49,7 +49,7 @@
   &__about {
     padding-top: 3%;
     justify-self: flex-start;
-    align-self: center;
+    align-self: flex-start;
     display: grid;
     grid-template-rows: 1fr;
     row-gap: 10px;
