--- a/src/scss/blocks/_mainBar.scss
+++ b/src/scss/blocks/_mainBar.scss
@@ -24,6 +24,8 @@
   padding-top: 20px;
   font-size: 1.2rem;
   font-weight: 500;
+  grid-row: 1/2;
+  margin-bottom: 30px;
   &-sort {
     &-select {
       cursor: pointer;
