--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 @import "./blocks/colors";
 @import "./blocks/footer";
 @import "./blocks/main";
-@import "./blocks/details";
+@import "./blocks/detailsPage";
 @import "./blocks/page404";
 @import "./blocks/filters";
 @import "./blocks//mainBar";
