--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./blocks/page404";
 @import "./blocks/filters";
 @import "./blocks//mainBar";
+@import "./blocks//cart";
 
 html {
     font-family: $base-font-family;
