feat: add summary block

--- a/src/scss/blocks/_cart.scss
+++ b/src/scss/blocks/_cart.scss
@@ -96,12 +96,17 @@
     }
 }
 
+.summary-wrapper {
+    min-width: 250px;
+    width: 25%;
+    min-height: 250px;
+}
+
 .total-cart {
     display: flex;
     flex-direction: column;
-    min-width: 200px;
-    width: 20%;
-    max-height: 250px;
+    min-width: 250px;
+    min-height: 250px;
     padding: 5px;
     row-gap: 20px;
     align-items: center;
@@ -111,7 +116,25 @@
         font-weight: bold;
         font-size: $price-font-size;
     }
+    .total-price_inactive {
+        text-decoration: line-through;
+    }
+    .total-apply-codes {
+        display: flex;
+        flex-direction: column;
+        row-gap: 5px;
+        align-items: center;
+        padding: 5px;
+        width: 90%;
+        border: 1px solid $gray-light-border;
+        font-size: $nav-font-size;
+        &__title {
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+    }
     .total-promo {
+        width: 90%;
         text-align: center;
         height: 30px;
         border: 1px solid $gray-light-border;
@@ -130,4 +153,29 @@
     .total-buy-btn:hover {
         background-color: $main-gold;
     }
+}
+
+.total-apply-codes__item,
+.avaliable-promo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 10px;
+    font-size: $pagination-font-size;
+    align-items: center;
+}
+
+.add-promo-code-btn,
+.remove-promo-code-btn {
+    color: $main-white;
+    background-color: $main-black-deep;
+    font-size: $pagination-font-size;
+    width: 40px;
+    height: 20px;
+    transition: 300ms;
+}
+
+.add-promo-code-btn:hover,
+.remove-promo-code-btn:hover {
+    background-color: $main-gold;
 }
