--- a/src/scss/blocks/_colors.scss
+++ b/src/scss/blocks/_colors.scss
@@ -11,6 +11,7 @@ $main-gold: #dcb14a;
 $color-gray-placeholder: #e5e7eb;
 $color-red-sale-icon: #f14705;
 $color-blue-dicount: #98d6ca;
+$nav-bg: #f4f5f7;
 $color-bg-full-transparent: rgba(1, 1, 1, 0);
 $color-bg-half-transparent: rgba(1, 1, 1, 0.5);
 $gradient-bg-slider: linear-gradient(0deg, #ccc 1em, transparent 0);
@@ -27,9 +28,11 @@ $pagination-font-size: 12px;
 $breakpoint-mobile: 320px;
 $breakpoint-small-tablet: 450px;
 $breakpoint-tablet: 720px;
+$breakpoint-desc: 1200px;
 
 $card-logo: url("/assets/img/nops-icon.webp");
 $card-aexpres: url("/assets/img/aExpress-icon.svg");
 $card-visa: url("/assets/img/visa-icon.png");
 $card-mc: url("/assets/img/mc-icon.svg");
 $card-up: url("/assets/img/up-icon.png");
+$search-icon: url("/assets/svg/search.svg");
