--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,11 +1,26 @@
 @import "./_colors.scss";
 
+.footer-wrapper {
+    border-top: 1px solid $gray-light-border;
+}
+
+.footer-line {
+    height: 1px;
+    width: 100vw;
+    background-color: $gray-input-border;
+    margin-top: 40px;
+    position: relative;
+    left: -20px;
+}
+
 .page-footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 130px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    height: 200px;
 }
 
 .gh-anchor-block {
@@ -53,10 +68,17 @@
 @media (min-width: $breakpoint-small-tablet) {
     .page-footer {
         flex-direction: row;
-        height: 80px;
+        height: 130px;
     }
     .gh-anchor-block {
         flex-direction: column;
         gap: 6px;
+    }
+}
+
+@media (min-width: $breakpoint-desc) {
+    .footer-line {
+        left: calc( (0 - (100vw - 1160px)) / 2);
+        padding-left: calc((100vw - 1160px) / 2 + 20px);
     }
 }
