--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -35,7 +35,7 @@
   &__item {
     display: grid;
     grid-template: 220px auto 25px 15px/1fr;
-    gap: 10px;
+    gap: 5px;
     width: 100%;
     height: 290px;
     position: relative;
@@ -75,10 +75,13 @@
       object-fit: cover;
     }
     &-title {
+      display: flex;
+      align-items: center;
+      height: 55px;
       font-size: 100%;
       color: $main-black;
       text-align: center;
-      align-self: flex-start;
+      justify-content: center;
       transition: all 0.2s;
       user-select: none;
       cursor: pointer;
@@ -111,11 +114,14 @@
   justify-content: center;
   font-size: 2rem;
   left: 15%;
-  bottom: 50px;
+  bottom: 135px;
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  background-color: $main-gold;
+  background-color: $gray-light-border;
   opacity: 0;
   transition: all 0.5s;
+}
+.page-up:hover {
+  background-color: $main-gold;
 }
