--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,9 +25,18 @@ html {
     max-width: 1200px;
     padding: 0 20px;
 }
+.naw-wrapper {
+    height: 120px;
+    width: 100vw;
+    background-color: $nav-bg;
+    position: relative;
+    left: -20px;
+    padding-left: 40px;
+    display: flex;
+    align-items: center;
+}
 #page-menu {
-    margin: 40px 0px;
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-weight: 500;
     a {
         transition: all 0.2s;
@@ -39,4 +48,10 @@ html {
 }
 main {
     min-height: calc(100vh-230px);
+}
+@media (min-width: $breakpoint-desc) {
+    .naw-wrapper {
+        left: calc( (0 - (100vw - 1160px)) / 2);
+        padding-left: calc((100vw - 1160px) / 2 + 20px);
+    }
 }
