--- a/src/scss/blocks/_colors.scss
+++ b/src/scss/blocks/_colors.scss
@@ -28,6 +28,7 @@ $pagination-font-size: 12px;
 $breakpoint-mobile: 320px;
 $breakpoint-small-tablet: 450px;
 $breakpoint-tablet: 720px;
+$breakpoint-big-tablet: 1000px;
 $breakpoint-desc: 1200px;
 
 $card-logo: url("/assets/img/nops-icon.webp");
