--- a/src/scss/blocks/_filters.scss
+++ b/src/scss/blocks/_filters.scss
@@ -5,20 +5,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
+    position: fixed;
     column-gap: 20px;
     padding-top: 20px;
-    z-index: 2;
+    z-index: 100;
     top: 0;
     left: -100%;
     width: 300px;
-    height: 100vh;
     background-color: $main-white;
     transition: 500ms;
-    overflow-y: scroll;
+    overflow: auto;
+    height: 100vh;
     &__line {
         width: 260px;
-        height: 1px;
+        border-bottom: 1px solid $main-gray-light;
         background-color: $main-gray-light;
         margin: 20px 0;
     }
@@ -50,12 +50,26 @@
     }
 }
 
+.filter-btn {
+    width: 100px;
+    height: 35px;
+    font-size: $base-font-size;
+    background-color: $main-black;
+    color: $main-white;
+    transition: 300ms;
+    cursor: pointer;
+}
+.filter-btn:hover {
+    background-color: $main-gold;
+}
+
 .category-block,
 .brand-block {
     display: flex;
     flex-direction: column;
     width: 250px;
     max-height: 260px;
+    min-height: 250px;
     overflow-x: overlay;
     &__title {
         user-select: none;
@@ -129,7 +143,30 @@
     }
 }
 
-@media (min-width: $breakpoint-tablet) {
+.category-block_sliders {
+    min-height: 100px;
+}
+
+.filters-bg {
+    position: absolute;
+    z-index: -100;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 1000vh;
+    background-color: $color-bg-half-transparent;
+    display: none;
+    transition: 300ms;
+}
+.filters-bg_show {
+    display: block;
+    z-index: 99;
+}
+
+@media (min-width: $breakpoint-big-tablet) {
+    .products__filter {
+        grid-row: 1/3;
+    }
     .filters-container {
         position: relative;
         z-index: 0;
@@ -142,5 +179,8 @@
         left: 0;
         height: auto;
         overflow: auto;
+    }
+    .filter-btn {
+        display: none;
     }
 }
