--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -1,5 +1,5 @@
 .modal-container {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     flex-direction: column;
